# high-frequency-trading

./: .gitignore  MANIFEST.in  README.md  monitor.sh  pyproject.toml  render.yaml  requirements.txt  setup.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx
frontend/src/services/: api.ts
hft-frontend/: package-lock.json  package.json
hft-frontend/public/: index.html  manifest.json
hft-frontend/src/: App.css  App.js  config.js
src/crypto_hft_tool/: backtest.py  config.py  dashboard.py  data_pipeline.py  data_processor.py  data_provider.py  enhanced_risk_manager.py  enhanced_signals.py  execution_manager.py  fee_manager.py  generate_sample_data.py  live_trader.py  main.py  orderbook_manager.py  risk_manager.py  run_live.py  signals.py  simulation.py
src/crypto_hft_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/crypto_hft_tool/frontend/src/app/: page.tsx
src/crypto_hft_tool/frontend/src/components/: Leaderboard.tsx  LiveDataFeed.tsx  RecentTrades.tsx  TradingCharts.tsx
src/crypto_hft_tool/utils/: logging_config.py
tests/: test_backtest.py  test_live_trader.py  test_risk_manager.py  test_signals.py  test_simulation.py
